Add local loading to tesseract and jieba

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "wxt prepare"
   },
   "dependencies": {
+    "@node-rs/jieba": "^2.0.1",
     "@tesseract.js-data/chi_sim": "^1.0.0",
     "@tesseract.js-data/eng": "^1.0.0",
     "tesseract.js": "^7.0.0",
