--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "wxt",
     "build": "wxt build",
     "compile": "tsc --noEmit",
-    "postinstall": "wxt prepare"
+    "postinstall": "wxt prepare",
+    "prepare-dictionaries": "gunzip -c public/cedict_1_0_ts_utf-8_mdbg.txt.gz | sort > public/cedict-sorted.txt"
+
   },
   "dependencies": {
     "@node-rs/jieba": "^2.0.1",
@@ -24,3 +26,4 @@
     "wxt": "^0.20.14"
   }
 }
+
